[metadata]
name=abclib
version=0.0.1
# version=attr: lib_now.__version__
description = This package provides the interface to the various databases of NOW
# long_description = file: README.rst
# keywords = now, database, redshift
# license = BSD 3-Clause License
# classifiers =
#     Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
# zip_safe = False
# install_requires =
#     python_version>="3.7"

[options.packages.find]
where=src
